Bug 264610 - kate tree browser ignores background shading settings
Summary: kate tree browser ignores background shading settings
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 265598 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-28 11:10 UTC by Piotr Keplicz
Modified: 2011-06-25 16:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Keplicz 2011-01-28 11:10:56 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

A tree browser introduced in Kate 4.6 ignores the background shading setting. At start it always defaults to shading enabled with some predefined colors.

Reproducible: Didn't try

Steps to Reproduce:
1. Start kate
2. Change Tree View -> Background Shading setting (anything: enable/disable, change colors)
3. Restart kate

Actual Results:  
The tree view background shading shows up with some predefined settings, but the configuration module shows the modified settings.

Expected Results:  
The tree view background shading is set up according to the user's configuration.
Comment 1 Piotr Keplicz 2011-02-01 11:45:05 UTC
Ditto when a list view is enabled instead of the tree view.
Comment 2 Thomas Fjellstrom 2011-02-09 18:34:10 UTC
Hmm, have you tried seeing what happens when you load a session, and save it after changing the coloring? I'm not sure the tree view works with the fixes to kate's default session settings stuff.
Comment 3 Piotr Keplicz 2011-02-09 20:56:25 UTC
Indeed, it works fine now. Actually before that there was no session (.kde/share/apps/kate/sessions was empty, I might have deleted sessions by hand).
Comment 4 Piotr Keplicz 2011-02-10 15:39:43 UTC
Marked the bug as resolved too quickly - the problem persists.
Comment 5 Dominik Haumann 2011-06-25 16:18:15 UTC
*** Bug 265598 has been marked as a duplicate of this bug. ***
Comment 6 Dominik Haumann 2011-06-25 16:24:34 UTC
I just fixed it for KDE 4.7.