tree list: honor background shading setting

BUG: 264610